--- a/src/app/common-component/nav/nav.component.html
+++ b/src/app/common-component/nav/nav.component.html
@@ -9,6 +9,12 @@
         <li class="nav-item">
           <a [ngClass]="{'nav-link text-light': ((page | async) === 'home'), 'nav-link': true}" [routerLink]="['/home']">Home <span *ngIf="((page | async) === 'home')" class="sr-only">(current)</span></a>
         </li>
+        <li *ngIf="((session | async) && (userRestriction | async ) < 5)" class="nav-item">
+          <a [ngClass]="{'nav-link text-light': ((page | async) === 'admin'), 'nav-link': true}" [routerLink]="['/admin']">Admin <span *ngIf="((page | async) === 'admin')" class="sr-only">(current)</span></a>
+        </li>
+        <li *ngIf="((session | async) && (userRestriction | async ) < 5)" class="nav-item">
+          <a [ngClass]="{'nav-link text-light': ((page | async) === 'dashboard'), 'nav-link': true}" [routerLink]="['/dashboard']">Dashboard <span *ngIf="((page | async) === 'dashboard')" class="sr-only">(current)</span></a>
+        </li>
         <li *ngIf="(session | async)" class="nav-item">
           <a [ngClass]="{'nav-link text-light': ((page | async) === 'class'), 'nav-link': true}" [routerLink]="['/class']">Class <span *ngIf="((page | async) === 'class')" class="sr-only">(current)</span> </a>
         </li>
